# mlops_hw

./: README.md  decision_tree_model.pkl  logistic_regression_model.pkl  tree_model.pkl
fast_api/: main.py  pyproject.toml
