[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
